--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
         }
         #chat_history {
             width: 90%; /* Set width to almost full screen */
-            height: 70vh; /* Set height to 70% of the viewport height */
+            height: 40vh; /* Set height to 70% of the viewport height */
             overflow-y: auto;
             margin: 20px auto;
             padding: 20px;
@@ -101,7 +101,7 @@
 
     <form id="chatForm">
         <label for="user_input">Enter your query:</label>
-        <textarea id="user_input" name="user_input" autocomplete="off"></textarea><br><br>
+        <textarea id="user_input" name="user_input" autocomplete="off"></textarea>
         <button type="submit">Send</button>
     </form>
     
